--- a/15_16/acta_150908.rst
+++ b/15_16/acta_150908.rst
@@ -79,20 +79,16 @@ Ninguno como centro, los dos a título personal.
 S_P comenta de dónde han salido las plantillas y horas de trabajo (lectivas, complementarias y de cómputo de mensual). En el apartado de la asignación de guardias se comentan aspectos sobre cómo repartir las guardias Esther que si las gestiona ED la asignación). S_G propone que la gestión la hagan los propios profesores implicados, y que si hubiera algún problema entonces sí que tendría que hacerla el equipo directivo. A_C comenta que los refuerzos de guardia de horarios a los que no corresponde la hora de guardia completa deberían implicar hacer la parte proporcional de guardias y no solo cuando no haya profesor de guardia disponible. S_G explica que como medida educativa se va aplicar la expulsión a un aula y hora determinada, en esos casos los alumnos expulsados deberán ser atendidos por profesorado de guardia por lo que en esa hora habrá 3 profesores de guardia. J_A aprovecha para recordar que los horarios actuales suponen la realización de 10 minutos de más cada día. S_G explica las cargas horarias de cada profesor.    
 
 #. Información del Reglamento de Convivencia
-P_R explica que se ha ido publicando la última versión en 3 documentos. DOs sesiones (para todos) y otra para los nuevos (carné). Normas, Condutas contarias y medidas y Conductas grav. (practicamente refleja literalmente la legislación). Nadie se opene al reglamento de conv. (entrada en vigor este año)
-S_P solicitan feedback para ver su utilidad, porque implica mucho esfuerzo. Quedºan 6 puntos, expulsión y pérdida de extraescolares. 
+P_R explica que se ha convocado tres sesiones voluntarias sobre el reglamento de convivencia. Dos sesiones para todos y una específica para los nuevos para explicar el carné por puntos. El Regalmento se divide en tres partes: Normas, Conductas contarias y medidas y Conductas gravemente perjudiciales (éstas últimas son prácticamente una transcripción de la normativa foral. Nadie se opone al reglamento de convivencia y por tanto se aprueba la entrada en vigor este año. La herramienta estrella del reglamento es el carné por puntos. S_P solicitan feedback para ver su utilidad, porque implica mucho esfuerzo. Como principal novedad con respecto al año pasado se comenta que cuando al alumnos le quedan 6 puntos, se produce la primera expulsión y la pérdida del derecho a acividades extraescolares. 
 
-#. Información relativa a las incidencias en el aula: protocolo “profesor>tutor>J.E.”, sistema SQR.
-
-Se recuerda Profesor --> Tutor --> Jefe de estudios --> Dirección.
+#. Información relativa a las incidencias en el aula: S_P recuerda que el protocolo de actuación ha de seguir este orden: profesor, tutor, jefe de estudios, y como último recurso, a evitar, el sistema SQR (sistema de quejas y reclamacciones) que gestiona dirección.
 
 #. Profesorado de guardia en el patio y en el centro: recorrido, pasillos e incidencias.
-
 Una desalojando y otra fuera (patio). Patio.A 6º hora aguantar al alumnado
 
 #. Hoja de presentación de materias (web y alumnado)
 
-28 de septiembre fecha de entrega de las hojas de presentación
+18 de septiembre fecha de entrega de las hojas de presentación
 
 #. Entrega de horarios
 
