--- a/15_16/ccp_150918.rst
+++ b/15_16/ccp_150918.rst
@@ -5,24 +5,29 @@
 
 El alumnado pide tres balones. J_A va dejar 3 balones para que los autogestionen. Se aprueba con la condición de que si hay problemas se les quita.
 
-**Informaciones:** Se informa de los siguientes aspectos:
-Visita de Inspección: PAI y formación no hay estructura. La persona responsable está de baja. Solicita la exención de las clases de EF. X a primera con escrito. La hora del martes a 3º tiene que permanecer en centro. Se propone que se quede en las mesas de . Jornadas parciales y sustituciones --> formación 12 horas obligatorias. 31 alumnos nose desdobla. 33 alumnos para desdoblar en septiembre, en octubre ya no. Plantilla: 20 horas + 18 horas los siguientes. Lectivas ni bi ni optativas. Se ha pedido jornada completa de orientación. Cambiar la PGA, inglés, lengua y matemáticas global al final de curso. 1º y 4º
+Informaciones: Se informa de los siguientes aspectos:
 
-22 martes de  10 a 12 exhibición de la GC.
-
-Reunión de los tutores con los padres. Mañanas en hora de reunión de tutores (antes del 15 de octubre). La semana de después de fiestas, ya que hay que preparar el listado de las semanas. P_R  
-
-Libros de texto: estado del envío
-Plazo para presentar necesidades de material por área. Para la ccp de después.
-Voluntarios para extraescolares del alumnado:
-    Semana blanca (1º ESO)
-    Semana azul (2º ESO)
-    Semana verde (3º ESO)
-    Viaje de estudios (4º ESO)
-Aportaciones de los asistentes
-
-
-**Aportaciones de los asistentes:** Javier P_R almuerzo al mes, Las luces
-J_A Se puede instalar el autoapagado de ordenarores. Esther yu M_J 30 noviembre todo 4 menos diver Caixaforum.
+    Visita de Inspección: PAI y formación no hay estructura. La persona responsable está de baja. Sandra Martínez ha solicitado la exención de las clases de EF por ser deportista de elite. El miércoles tiene clase a primera y se le va a pedir una autorización a los padres para que entre una hora tarde. La hora del martes a 3ª hora tiene que permanecer en centro y se propone que se quede en las mesas que están junto a la sala de profesores. Desde Inspección se ha ratificado que las personas que están a jornadas parcial o con sustituciones es obligatoria la formación 12 horas en centro. Respecto al aumento de matrícula en 4º de la ESO, con 31 alumnos no se desdobla. El número para desdoblar es 33 alumnos y siempre que se produzcan en septiembre, en octubre ya no. Para la creación de plazas de Plantilla en el centro la normativa dice que la priemra plaza sse crea con 20 horas a partir de ahí, con 18 horas los siguientes. Las horas han de ser lectivas, sin contar ni las bilingües ni las optativas. Se ha pedido jornada completa de orientación. Desde inspección se pide cambiar la PGA porque tiene aspectos mejorables. La inspectora ha pedido que se haga una prueba global para las materias de Inglés, Lengua y Matemáticas global al final de curso. Se le va a proponer a la inspectora la realización de las mismas en 1º y 4º.
+    
+    Exhibición de la Guardia Civil: Se espera la exhibición para el 22 martes de 10 a 12. Se hará para primaria y secundaria.
+    
+    Reunión de los tutores con los padres. Tradicionalmente, se hace por mañanas en hora de reunión de tutores (antes del 15 de octubre). Se propone hacerse durante la semana de después de fiestas, ya que hay que preparar la preinscripción del alumnado en las semanas blanca, verde, etc.
+    
+    Libros de texto: Hay alumnos a los que no se les ha dado libros porque tienen pendientes la entrega de algún libro. Respecto a los envíos se comenta que en 1 y 3 se han solicitado libros nuevos para su adaptación a la LOMCE, y faltan algunos libros por entregar por parte de los proveedores.
+    
+    Plazo para presentar necesidades de material por área. Para la ccp de después.
+    
+    Voluntarios para extraescolares del alumnado:
+    
+        Semana blanca (1º ESO)
+        
+        Semana azul (2º ESO)
+        
+        Semana verde (3º ESO)
+        
+        Viaje de estudios (4º ESO)
+        
+Aportaciones de los asistentes: Javier P_R almuerzo al mes, Oscar en los recreos apagar las luces.
+J_A Se puede instalar el autoapagado de ordenarores. E_V y M_J 30 noviembre todo 4 menos diver Caixaforum.
 
 
