--- a/content/art002.rst
+++ b/content/art002.rst
@@ -36,7 +36,7 @@ por ejemplo, el proyecto matemáticas, los comandos serían: ::
 
 
 Otra cosa que hay que hacer, si no se ha hecho, crear una clave pública-privada para
-la conexión ssh al servidro *GitHub*. La clave RSA hay que meterla en los *settings*
+la conexión ssh al servidor *GitHub*. La clave RSA hay que meterla en los *settings*
 de nuestra cuenta *GitHub*.
 
 
