latex en pelican

--- a/content/art005.rst
+++ b/content/art005.rst
@@ -10,3 +10,11 @@ Insertar código latex en nuestros artículos .rst
 Existe la posibilidad de insertar código latex:
 
 	:math:`\frac{3}{2}\cdot\sqrt{12}`
+
+```
+En realidad el código latex sería :math:`\frac{3}{2}\cdot\sqrt{12}`.
+```
+
+El renderizado que *Pelican* hace inicialmente del código latex no está muy logrado (cuando lo pasa a html). Si queremos mejores resultados podemos utilizar algún plugin:
+
+	https://github.com/barrysteyn/pelican_plugin-render_math
