--- a/15_16/acta_150908.rst
+++ b/15_16/acta_150908.rst
@@ -93,13 +93,13 @@ Se comenta que para las guardias de patio el profesorado involucrado ha de repar
 #. Ruegos y preguntas:
     E_V Agradece el esfuerzo realizado para la creación de los departamentos. Respecto al carné por puntos, reconoce que pese al trabajo que implica al equipo directivo constituye una buena herramienta ya que permite objetivizar los criterios de expulsión y medidas educativas. 
 
-    Raquel pregunta por si están disponibles los listados de los diferentes grupos. S_G no está cerrado porque no están matriculados
+    Raquel pregunta por si están disponibles los listados de los diferentes grupos. S_G responde que no están terminados los listados porque todavía hay gente matriculándose.
 
-    Ana de cada 2 guardias que haga una. Desde el ED se invita a organizarse. Se le remite a solucionar.
+    Ana Chueca, respecto a los profesores que tienen refuerzo de guardia por no tener carga para una completa, pregunta si en lugar de que cubran guardias cuando no haya profesor de guardia  lo hagan de manera proporcional a la correspondencia por horario (Por ejemplo si a uno le corresponde media hora de guardia que haga de cada dos una). Al Equipo Directivo le parece bien aunque invita a organizarse a los propios integrantes del cuadrante de guardias. En caso de problemas organizativos, el equipo directivo actuaría en la organización interna de las guardias.
 
-    María Castaño solicita que se le comunican los interesados al curso de lenguaje de signos. Se le remite a poner una hoja para apuntarse en las sala de profesores.
+    María Castaño solicita que se le comunican los interesados al curso de lenguaje de signos. Se le remite a poner una hoja en la sala de profesores para hacer un sondeo.
     
-    Respecto a la formación se comenta que también se va a Curso de Tratamiendo de alumnos disruptivos.
+    Respecto a la formación en centro se comenta que también se va a realizar un *Curso de tratamiendo de alumnos disruptivos*.
 
 Y a las 11:50 se cierra la sesión.
 
