--- a/15_16/ccp2310.rst
+++ b/15_16/ccp2310.rst
@@ -1,6 +1,6 @@
-Apyma
+Claustro 2110
 
-Cordial dentro de dos meses
+Apyma: Cordial la próxima dentro de dos meses
 
 J_A confirma, están colaborando para la actividad de hábitos saludables
 
@@ -15,4 +15,5 @@ La PGA ya está colgada
 Mireia Respecte viene a hacer las prácticas del máster de educación de Biología y la tutorizará Esther 
 A mitad de noviembre dos semanas
 
-J_A informa de la actividad de hábitos saludables
+J_A informa de la actividad de hábitos saludables 13-10
+De 8 a 9, 3º y 4ºESO y de 9 a 10 1,2,uce y 3 PMAR. Lacturale (lácteos) Berlys (pan) Apyma (postres caseros y fruta)
