--- a/15_16/ccp2310.rst
+++ b/15_16/ccp2310.rst
@@ -17,3 +17,32 @@ A mitad de noviembre dos semanas
 
 J_A informa de la actividad de hábitos saludables 13-10
 De 8 a 9, 3º y 4ºESO y de 9 a 10 1,2,uce y 3 PMAR. Lacturale (lácteos) Berlys (pan) Apyma (postres caseros y fruta)
+
+Charla a los padres sobre nutrición
+
+Reservar el aula 
+
+Begoña comenta de poner la actividad dentro del plan de extraescolares como una complementaria
+
+Oscar venta de bocadillos para sacar dinero. Inspección, salud pública, bocadillos ni de tortilla ni manipulados, envasada mejor
+
+S_P que usen el aula de UCE. Begoña plantea los horarios
+
+Venta fuera, la fabricación en UCE, higiene y no perder tiempo de clase (que se organicen)
+
+Material:
+
+J_A pasa el papel
+Begoña 
+Pilar Ramos 70 euros
+Programa Orienta
+
+S_G Diario de Navarra NNTT y EF
+ 
+Carmen pregunta como está el plan de extraescolares para poder concretart el programa de educación sexual
+
+S_P la copla se quiere adelantar al primer trimestre
+
+En la siguiente CCP se hará seguimiento de la programación
+
+Disciplina: La tabla de cómputo para los tutores. Comenta el incidente del baño.
