--- a/15_16/ccp2310.rst
+++ b/15_16/ccp2310.rst
@@ -46,3 +46,13 @@ S_P la copla se quiere adelantar al primer trimestre
 En la siguiente CCP se hará seguimiento de la programación
 
 Disciplina: La tabla de cómputo para los tutores. Comenta el incidente del baño.
+
+El 2 de noviembre reunión con familias para el viaje
+
+3/11 a Cintruénigo con Pmar y UCE. PLEC como se va a implantar el PLEC (hasta que no llegue SIlvia)
+
+Salidas de emergencia ante que una persona se quede encerrada. 
+S_P se desarrolló un plan de seguridad hace 6 años que en principio se cumple la normativa.
+
+S_G escanea los partes, que esctriban fuerte
+
