--- a/15_16/ccp2310.rst
+++ b/15_16/ccp2310.rst
@@ -6,19 +6,20 @@ J_A confirma, están colaborando para la actividad de hábitos saludables
 
 Limpieza de patios --> Mayor antención (Javier se queja) 
 
-Limpieza de aulas --> Le han reducido horas, y que suban las mesas (2B sucias)
+Limpieza de aulas --> El personal de Le han reducido horas, y que suban las mesas (2B sucias)
 
-Begoña -> no pueden estar en las ventanas de infantil, en la puerta de primaria, el porche donde está la fuente
+Begoña pregunta por las zonas del patio a las que puede acceder el alumnado ya que tanta dispersión hace difícil el control de la limpieza 
+No pueden estar en las ventanas de infantil, en la puerta de primaria, el porche donde está la fuente
 
-La PGA ya está colgada 
+La PGA ya está colgada para su lectura y por si se quiere puntualizar algún aspecto de la misma.
 
 Mireia Respecte viene a hacer las prácticas del máster de educación de Biología y la tutorizará Esther 
 A mitad de noviembre dos semanas
 
-J_A informa de la actividad de hábitos saludables 13-10
-De 8 a 9, 3º y 4ºESO y de 9 a 10 1,2,uce y 3 PMAR. Lacturale (lácteos) Berlys (pan) Apyma (postres caseros y fruta)
+J_A informa de la actividad de hábitos saludables 13-11
+De 8 a 9, 3º y 4ºESO y de 9 a 10 1,2,uce y 3 PMAR. Lacturale (lácteos) Berlys (pan) Apyma (postres caseros y fruta). Después se darán tres charlas.
 
-Charla a los padres sobre nutrición
+Charla a los padres sobre nutrición pendiente de confirmarse
 
 Reservar el aula 
 
@@ -26,7 +27,7 @@ Begoña comenta de poner la actividad dentro del plan de extraescolares como una
 
 Oscar venta de bocadillos para sacar dinero. Inspección, salud pública, bocadillos ni de tortilla ni manipulados, envasada mejor
 
-S_P que usen el aula de UCE. Begoña plantea los horarios
+S_P que usen el aula de UCE. Begoña plantea que la organización de la actividad no implique pérdida de  horarios
 
 Venta fuera, la fabricación en UCE, higiene y no perder tiempo de clase (que se organicen)
 
@@ -37,9 +38,9 @@ Begoña
 Pilar Ramos 70 euros
 Programa Orienta
 
-S_G Diario de Navarra NNTT y EF
+S_G propone que el dinero del Diario de Navarra se utilice para el proyector y soporte de 4º de la ESO y dos torres para el aula de informática y el material solicitado por Educación Física
  
-Carmen pregunta como está el plan de extraescolares para poder concretart el programa de educación sexual
+Carmen pregunta como está el plan de extraescolares para poder concretar y coordinar el programa de educación sexual.
 
 S_P la copla se quiere adelantar al primer trimestre
 
@@ -47,12 +48,12 @@ En la siguiente CCP se hará seguimiento de la programación
 
 Disciplina: La tabla de cómputo para los tutores. Comenta el incidente del baño.
 
-El 2 de noviembre reunión con familias para el viaje
+El 2 de noviembre reunión con familias para el viaje 
 
-3/11 a Cintruénigo con Pmar y UCE. PLEC como se va a implantar el PLEC (hasta que no llegue SIlvia)
+3/11 a Cintruénigo con Pmar y UCE. Esther pregunta cómo se va a implantar el PLEC (hasta que no llegue SIlvia)
 
-Salidas de emergencia ante que una persona se quede encerrada. 
+J_A apunta que no hay salidas de emergencia que evite que una persona se quede encerrada dentro del centro. 
 S_P se desarrolló un plan de seguridad hace 6 años que en principio se cumple la normativa.
 
-S_G escanea los partes, que esctriban fuerte
+S_G solicita que se transmita al profesorado que tiene intención de escanear los partes, la necesidad  que escriban fuerte
 
