--- a/content/art010.rst
+++ b/content/art010.rst
@@ -26,5 +26,9 @@ Recetas de cacharreo con la Raspberry Pi
     
     `ConfigurarSonicPi <https://www.miskatonic.org/2015/01/17/setting-up-sonic-pi-on-ubuntu/>`_
     
+    También hay que tener en cuenta que no arrancará sonic-pi a no ser que tengamos iniciado el jack.
+    Para ello tenemos que arrancarlo desde el terminal ejecutando:*qjackctl* y dándole a *iniciar*.
+    Si no nos funcionara, nos vamos a *setup* y seleccionamos interfaz: *hw:PCH,0*
+    
   
     
